[package]
name = "website-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
russh = "0.53"
simple_rss_lib = { git = 'https://github.com/viddrobnic/simple-rss.git', branch = "master" }
tokio = { version = "1.46", features = ["full"] }
